# coursework3

./: .env.sample  .gitignore  main.py  pyproject.toml
src/: DBManager.py  baseapi.py  basevacancy.py  hhapi.py  vacancies.py
tests/: test_hhapi.py
